--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/lokosokol/hexlet-js/issues"
   },
-  "homepage": "https://github.com/lokosokol/hexlet-js#readme"
+  "homepage": "https://github.com/lokosokol/hexlet-js#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
+  }
 }
